--- a/uno_recharts/src/App.css
+++ b/uno_recharts/src/App.css
@@ -4,7 +4,7 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 110px;
 }
 
 .App-header {
@@ -16,6 +16,20 @@
 
 .App-intro {
   font-size: large;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-gap: 10px;
+  color: #444;
+}
+
+.grid-item {
+  color: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
 }
 
 @keyframes App-logo-spin {
